workspace = { members = ["tracing"] }
[package]
name = "rinonguci-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tracing = { path = "./tracing" }
lazy_static = "1.4.0"
any = "0.0.1"
enum-as-inner = "0.6.0"
anyhow = "1.0.40"
